# cairo

./: .cvsignore  .gitignore  AUTHORS  BIBLIOGRAPHY  BUGS  CODING_STYLE  COPYING  ChangeLog  ChangeLog.mk  HACKING  INSTALL  Imakefile  Makefile.am  Makefile.win32  NEWS  README  README.win32  RELEASING  ROADMAP  Releasing.mk  TODO  Version.mk  Xr.h  acinclude.m4  autogen.sh  cairo-version.h  cairo.pc.in  configure.ac  configure.in  gtk-doc.make  local.def  xr.c  xr.pc.in  xrcolor.c  xrfiller.c  xrfont.c  xrgstate.c  xrint.h  xrmisc.c  xrpath.c  (+10 more)
boilerplate/: .gitignore  Makefile.am  Makefile.sources  Makefile.win32  Makefile.win32.features  buffer-diff.c  cairo-boilerplate-beos-private.h  cairo-boilerplate-beos.cpp  cairo-boilerplate-cogl.c  cairo-boilerplate-directfb-private.h  cairo-boilerplate-directfb.c  cairo-boilerplate-drm.c  cairo-boilerplate-egl.c  cairo-boilerplate-getopt.c  cairo-boilerplate-gl-private.h  cairo-boilerplate-gl.c  cairo-boilerplate-glitz-agl.c  cairo-boilerplate-glitz-glx.c  cairo-boilerplate-glitz-private.h  cairo-boilerplate-glitz-wgl.c  cairo-boilerplate-glitz.c  cairo-boilerplate-glx.c  cairo-boilerplate-pdf-private.h  cairo-boilerplate-pdf.c  cairo-boilerplate-private.h  cairo-boilerplate-ps-private.h  cairo-boilerplate-ps.c  cairo-boilerplate-qt-private.h  cairo-boilerplate-qt.cpp  cairo-boilerplate-quartz-private.h  cairo-boilerplate-quartz.c  cairo-boilerplate-script-private.h  cairo-boilerplate-script.c  cairo-boilerplate-sdl-private.h  cairo-boilerplate-sdl.c  cairo-boilerplate-skia.c  cairo-boilerplate-svg-private.h  cairo-boilerplate-svg.c  cairo-boilerplate-system.c  cairo-boilerplate-test-surfaces-private.h  (+18 more)
perf/: .gitignore  Makefile.am  Makefile.sources  Makefile.win32  README  box-outline.c  cairo-analyse-trace.c  cairo-bench.h  cairo-perf-chart.c  cairo-perf-compare-backends.c  cairo-perf-cover.c  cairo-perf-diff  cairo-perf-diff-files.c  cairo-perf-diff.c  cairo-perf-graph  cairo-perf-graph-files.c  cairo-perf-micro.c  cairo-perf-os2.c  cairo-perf-posix.c  cairo-perf-print.c  cairo-perf-report.c  cairo-perf-timer-posix.c  cairo-perf-timer-win32.c  cairo-perf-timer.h  cairo-perf-trace.c  cairo-perf-win32.c  cairo-perf.c  cairo-perf.h  cairo-stats.c  cairo-stats.h  composite-checker.c  dragon.c  fill.c  glyphs.c  intersections.c  long-dashed-lines.c  long-lines.c  make-html.py  mask.c  mosaic.c  (+21 more)
perf/micro/: Makefile.sources  box-outline.c  composite-checker.c  curve.c  disjoint.c  dragon.c  fill.c  glyphs.c  hash-table.c  hatching.c  intersections.c  line.c  long-dashed-lines.c  long-lines.c  many-curves.c  many-fills.c  many-strokes.c  mask.c  mosaic.c  paint-with-alpha.c  paint.c  pattern_create_radial.c  pixel.c  pythagoras-tree.c  rectangles.c  rounded-rectangles.c  spiral.c  stroke.c  subimage_copy.c  tessellate.c  text.c  twin.c  unaligned-clip.c  wave.c  wide-fills.c  wide-strokes.c  world-map.c  zrusin.c
pixman/: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog.libic  ChangeLog.libpixregion  ChangeLog.slim  Makefile.am  NEWS  README  RELEASING  autogen.sh  configure.in  libpixman.pc.in  update.pl
pixman/src/: .cvsignore  .gitignore  Makefile.am  Makefile.win32  fbcompose.c  fbedge.c  fbedgeimp.h  fbmmx.c  fbmmx.h  fbpict.c  fbpict.h  fbtrap.c  ic.c  ic.h  icblt.c  icbltone.c  iccolor.c  iccompose.c  icformat.c  icimage.c  icimage.h  icint.h  icpixels.c  icrect.c  icrop.h  icstipple.c  ictransform.c  ictrap.c  ictri.c  icutil.c  pixman-remap.h  pixman-xserver-compat.h  pixman.h  pixmanint.h  pixregion.c  pixregionint.h  renderedge.c  renderedge.h  slim_export.h  slim_import.h  (+1 more)
src/: .cvsignore  .gitignore  Makefile.am  Makefile.am.analysis  Makefile.sources  Makefile.win32  Makefile.win32.features  README  Sources.mk  Xr.h  cairo-analysis-surface-private.h  cairo-analysis-surface.c  cairo-analyze-surface-private.h  cairo-analyze-surface.c  cairo-arc.c  cairo-array.c  cairo-atomic-private.h  cairo-atomic.c  cairo-atsui-font.c  cairo-atsui.h  cairo-backend-private.h  cairo-backend.pc.in  cairo-base64-stream.c  cairo-base85-stream.c  cairo-bentley-ottmann-rectangular.c  cairo-bentley-ottmann-rectilinear.c  cairo-bentley-ottmann.c  cairo-beos-surface.cpp  cairo-botor-scan-converter.c  cairo-boxes-intersect.c  cairo-boxes-private.h  cairo-boxes.c  cairo-cache-private.h  cairo-cache.c  cairo-cff-subset.c  cairo-clip-boxes.c  cairo-clip-polygon.c  cairo-clip-private.h  cairo-clip-region.c  cairo-clip-surface.c  (+355 more)
src/directfb/: cairo-directfb-compositor.c  cairo-directfb-font.c  cairo-directfb-private.h  cairo-directfb-surface.c
src/drm/: cairo-drm-bo.c  cairo-drm-gallium-surface.c  cairo-drm-i915-glyphs.c  cairo-drm-i915-private.h  cairo-drm-i915-shader.c  cairo-drm-i915-spans.c  cairo-drm-i915-surface.c  cairo-drm-i965-glyphs.c  cairo-drm-i965-private.h  cairo-drm-i965-shader.c  cairo-drm-i965-spans.c  cairo-drm-i965-surface.c  cairo-drm-intel-brw-eu.h  cairo-drm-intel-command-private.h  cairo-drm-intel-debug.c  cairo-drm-intel-ioctl-private.h  cairo-drm-intel-private.h  cairo-drm-intel-surface.c  cairo-drm-intel.c  cairo-drm-private.h  cairo-drm-radeon-private.h  cairo-drm-radeon-surface.c  cairo-drm-radeon.c  cairo-drm-surface.c  cairo-drm-xr.c  cairo-drm.c
src/glew/: glew.c
src/skia/: cairo-skia-context.cpp  cairo-skia-private.h  cairo-skia-surface.cpp
src/win32/: cairo-win32-display-surface.c  cairo-win32-font.c  cairo-win32-gdi-compositor.c  cairo-win32-surface.c
test/: .cvsignore  .gitignore  .valgrind-suppressions  6x13.pcf  Makefile.am  Makefile.refs  Makefile.sources  Makefile.win32  README  a1-image-sample.c  a1-mask.c  a8-mask.c  aliasing.c  alpha-similar.c  any2ppm.c  api-special-cases.c  arc-infinite-loop.c  arc-looping-dash.c  big-line.c  big-trap.c  bilevel-image.c  bitmap-font.c  buffer-diff.c  buffer-diff.h  bug-40410.c  bug-seams.c  cairo-test-beos.cpp  cairo-test-beos.h  cairo-test-directfb.c  cairo-test-private.h  cairo-test-runner.c  cairo-test-trace.c  cairo-test.c  cairo-test.h  cairo_test.c  cairo_test.h  caps-joins-alpha.c  caps-joins.c  caps-sub-paths.c  check-refs.sh  (+286 more)
util/: README  (+10 more)
(+223 files in other folders)
